--- a/_config.yml
+++ b/_config.yml
@@ -70,15 +70,20 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: PANDA GmbH
+        link: https://www.panda.technology/
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        sub_title: Senior C++ Software Engineer
+        caption: September 2021 - Present
+        # quote: >
+        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+          - Maintainer and main developer of metric math lib
+          - Math algorithms optimization
+          - Created tiny dnn engine from scratch
+          - Computer vision algorithm develop
+          - Daubechies wavelets algorithm optimization
+          - Setup CI, CB, c++ python bindings, pip packaging systems
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
