--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Victor Kataev
-title: Computer Visiom C++/Python/Matlab Linux Engineer
+title: Computer Vision C++/Python/Matlab Linux Engineer
 email: kataev.victor.1234@gmail.com
 website: victor1234.github.io
 
