--- a/_config.yml
+++ b/_config.yml
@@ -44,25 +44,27 @@ additional_links:
 # About Section
 about_title: About Me
 about_profile_image: images/profile.jpg
-about_content: | 
-  Experienced (10y+) R&D Engineer
+about_content: |
+  Experienced R&D engineer (10y+), with a wide range of completed projects in different areas. I have a good understanding of how to organize work in the unknown domain, which development and research directions to choose, how to analize results and make decisions.
+  I pay much attention to clear solution design, unit tests, documentation, code readability, CI, CB.
+  My goal in my work is to create an effective solution which is user friendly and maintainable.
 
 content:
   - title: Skills
     layout: text
     content: | # this will include new lines to allow paragraphs
-      **C++** as *main language*  
-      **Python** for *prototyping*  
-      **Matlab** for *algorithms reference implementation and documentation*  
-      **CMake** as *main framework  for build, test and benchmark project*  
-      **Conan** *for crossplatform dependencies management*  
-      **OpenCV**, **DLib** as *computer vision libs*  
-      **Ceres,** **GTSAM** as *nonlinear solver libs*  
-      **Blaze**, **Eigen** as *linear algebra  libs*  
-      **GNUPlot**, **Matplotlib,** **plotly**, **dash** for *visualization*  
-      **GIT** as *version control system*  
-      **Catch2** as *test framework*  
-      **CLion**, **NeoVim** as *IDE and code editor*  
+      **C++** as *main language*
+      **Python** for *prototyping*
+      **Matlab** for *algorithms reference implementation and documentation*
+      **CMake** as *main framework  for build, test and benchmark project*
+      **Conan**, **vcpkg** *for crossplatform dependencies management*
+      **OpenCV**, **DLib** as *computer vision libs*
+      **Ceres,** **GTSAM** as *nonlinear solver libs*
+      **Blaze**, **Eigen** as *linear algebra  libs*
+      **GNUPlot**, **Matplotlib,** **plotly**, **dash** for *visualization*
+      **GIT** as *version control system*
+      **Catch2** as *test framework*
+      **CLion**, **NeoVim** as *IDE and code editor*
 
   - title: Opensource Activity # Title for the section
     layout: list # Type of content section (list/text)
@@ -81,7 +83,7 @@ content:
         quote: >
           A universal C++ compression library based on wavelet transformation
         description: | # this will include new lines to allow paragraphs
-          I'm one of the developers inside Panda team  
+          I'm one of the developers inside Panda team
           Contribution
           - CMake/conan build system, CI
           - Python bindings and build system
@@ -137,7 +139,7 @@ content:
         title: Huawei, R&D department, AR/VR laboratory
         link: huawei.com
         sub_title: Senior C++ Computer Vision Engineer
-        caption: December 2019 — September 2021 
+        caption: December 2019 — September 2021
         description: |
           - Precise camera localization by 2D code
           - Fast pose recognition of 3D dot pattern
@@ -148,7 +150,7 @@ content:
         title: Freelancer (upwork.com, freelansim.ru, etc)
         link: upwork.com
         sub_title: C++ Computer Vision Engineer
-        caption: May 2012 — December 2021 
+        caption: May 2012 — December 2021
         description: |
           - Stereocamera system with two single cams(calibration, synchronization)
           - Application for one hand big gesture recognition with monolense camera
@@ -164,7 +166,7 @@ content:
         title: Biglion
         link: biglion.ru
         sub_title: C++ Developer
-        caption: March 2012 — May 2012 
+        caption: March 2012 — May 2012
         description: |
           Worked on mobile application for Samsung Bada OS
 
@@ -172,7 +174,7 @@ content:
         title: Hotspot
         link: myhotspot.ru
         sub_title: Augmented Reality Software Engineer
-        caption: May 2011 — March 2012 
+        caption: May 2011 — March 2012
         description: |
           - Created own augment reality engine from scratch.
           - Worked with kinect (gesture interface)
@@ -201,7 +203,7 @@ content:
   #     - Knitting
   #     - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
   #
-  #     Look at this cool image  
+  #     Look at this cool image
   #     ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
