Update huawei section

--- a/_config.yml
+++ b/_config.yml
@@ -141,10 +141,13 @@ content:
         sub_title: Senior C++ Computer Vision Engineer
         caption: December 2019 — September 2021
         description: |
+          We mostly dealt with SLAM problems.\
+          I did projects as a team member, personally, and as a project manager:
           - Precise camera localization by 2D code
           - Fast pose recognition of 3D dot pattern
-          - Researching deeply modern nonlinear solver (GTSAM)
-          - Create slam backend engine from scratch (project manager)
+          - Research modern nonlinear solver (GTSAM) (I found (issue)[https://github.com/borglab/gtsam/issues/248#issuecomment-613988881] in GTSAM)
+          - Slam backend engine from scratch (as project lead)
+          - Research the efficiency of 3D map representation as a set of geometric primitives in a SLAM problem
 
       - layout: left
         title: Freelancer (upwork.com, freelansim.ru, etc)
