--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ content:
           - Created tiny dnn engine from scratch
           - Computer vision algorithms implementation
           - Daubechies wavelets algorithm optimization
-          - Created CI, CB, c++ python bindings, pip packaging systems
+          - Created CI, CB, C++ Python bindings, pip packaging systems
 
       - layout: left
         title: Huawei, R&D department, AR/VR laboratory
@@ -145,7 +145,7 @@ content:
           I did projects as a team member, personally, and as a project manager:
           - Precise camera localization by 2D code
           - Fast pose recognition of 3D dot pattern
-          - Research modern nonlinear solver (GTSAM) (I found [issue](https://github.com/borglab/gtsam/issues/248#issuecomment-613988881] in GTSAM)
+          - Research modern nonlinear solver (GTSAM) (I found [this issue](https://github.com/borglab/gtsam/issues/248#issuecomment-613988881))
           - Create SLAM backend engine from scratch (as project lead)
           - Research the efficiency of 3D map representation as a set of geometric primitives in a SLAM problem
 
