--- a/_config.yml
+++ b/_config.yml
@@ -139,6 +139,17 @@ content:
           - Linear algebra algorithms optimization
           - Creation CI, CB, C++ Python bindings and pip packaging systems
           - Creation Conan package for WaveletBuffer and added it to [conan-center-index](https://github.com/conan-io/conan-center-index)
+      - layout: left
+        title: Artial
+        sub_title: Autonomy Lead/Senior Computer Vision Engineer/Startup consultant
+        caption: Apr 2023 - May 2023
+        description: |
+          As an experienced engineer, I have laid a solid foundation for the successful development of software for optical navigation of UAVs.\
+          My work includes:
+          - Organizing and planning technical workflows
+          - Creating software architecture for SLAM, obstacle avoidance, drone control, path planning, sensors, etc
+          - Developing integration testing and benchmarking approaches
+          - Setting up and integrating CI, CB into the development process
 
       - layout: left
         title: Huawei, R&D department, AR/VR laboratory
